==> egobun/project/cubemx/udm/Example_PMSM/src/pmsm.c <==
#include "stm32f10x_rcc.h"
#include "stm32f10x_gpio.h"
#include "stm32f10x_tim.h"
#include "stm32f10x_exti.h"
#include "stm32f10x_flash.h"
#include "misc.h"
#include "string.h"
#include "stdio.h"
#include "pmsm.h"
#include "adc_dma.h"
#include "systickdelay.h"
#define PMSM_SINTABLESIZE	192
#define SETTINGS_WORDS 8
#define UH	0
#define UL	1
#define VH	2
#define VL	3
#define WH	4
#define WL	5
#define SETTINGS_FLASH_PAGE_ADDR	0x800FC00

void EXTI9_5_IRQHandler(void) {
	uint8_t i;
	uint8_t newPMSM_SensorPosition;
	uint16_t TIM_Counter;

	if ((EXTI_GetITStatus(EXTI_Line7) | EXTI_GetITStatus(EXTI_Line8) | EXTI_GetITStatus(EXTI_Line9)) != RESET) {
    	// Clear interrupt flag
        EXTI_ClearITPendingBit(EXTI_Line7);
        EXTI_ClearITPendingBit(EXTI_Line8);
        EXTI_ClearITPendingBit(EXTI_Line9);

        newPMSM_SensorPosition = PMSM_HallSensorsGetPosition();
        TIM_Counter = TIM_GetCounter(TIM3);
    	////////////////////////////////////////////////////
    	// FILTERS
    	////////////////////////////////////////////////////
    	// So small time - noise in fronts
		//if ( (TIM_Counter > 0) && (TIM_Counter < 10) ) {
		//	return;
		//}

		// Speed raise so fast (unreal fast) - sensor noise
		//if (TIM_Counter < PMSM_Speed/2) {
		//	return;
		//}

		// Interrupt is happened but sensor state hasn't changed.
		// "Double interrupt" bug
		if (PMSM_SensorPosition == newPMSM_SensorPosition) {
			return;
		}
		////////////////////////////////////////////////////

		if (PMSM_SensorCheckMode == 1) { // Check mode
			if (PMSM_SensorPositionCount < 36) {
				settings.PMSM_STATE_TABLE_INDEX[PMSM_MotorSpin][newPMSM_SensorPosition] = PMSM_GetNormPos(PMSM_SinTableIndex + PMSM_SINTABLESIZE/4);
				//settings.PMSM_NEXT_STATE_TABLE[PMSM_MotorSpin][PMSM_NEXT_STATE] = PMSM_HallSensorsGetPosition();
				NEXT_STATE_TABLE[PMSM_MotorSpin][PMSM_NEXT_STATE] = newPMSM_SensorPosition;
				PMSM_NEXT_STATE ++;
				if (PMSM_NEXT_STATE > 5) {
					PMSM_NEXT_STATE = 0;
				}

				PMSM_SensorPositionCount += 1;
			}
			else {

				// Prepare settings.PMSM_NEXT_STATE_TABLE
				for (i=0; i<4; i++) {
					settings.PMSM_NEXT_STATE_TABLE[PMSM_MotorSpin][NEXT_STATE_TABLE[PMSM_MotorSpin][i]] = NEXT_STATE_TABLE[PMSM_MotorSpin][i+1];
				}
				settings.PMSM_NEXT_STATE_TABLE[PMSM_MotorSpin][NEXT_STATE_TABLE[PMSM_MotorSpin][5]] = NEXT_STATE_TABLE[PMSM_MotorSpin][0];

				PMSM_SaveSensorPosition();
				PMSM_SetSensorCheckMode(0);
			}

    		return;
		}
		else { // Run mode
			// Phase correction
			PMSM_SinTableIndex = PMSM_GetState(newPMSM_SensorPosition);
			PMSM_SinTableLimit = 0;
			PMSM_PWM_Update();

			// If new sensor position is same that waited
			if (settings.PMSM_NEXT_STATE_TABLE[PMSM_MotorSpin][PMSM_SensorPosition] == newPMSM_SensorPosition) {
				// Get rotation time (in inverse ratio speed) from timer TIM3
				PMSM_Speed_prev = PMSM_Speed;
				PMSM_Speed = TIM_Counter;
			}
			else {
				PMSM_Speed_prev = 0;
				PMSM_Speed = 0;
			}
			PMSM_SensorPosition = newPMSM_SensorPosition;

			TIM_Cmd(TIM3, ENABLE);
			TIM_SetCounter(TIM3, 0);

			// It requires at least two measurement to correct calculate the rotor speed
			if (PMSM_MotorSpeedIsOK()) {
				// Enable timer TIM4 to generate sine
				TIM_SetCounter(TIM4, 0);
				// Set timer period
				TIM4->ARR = PMSM_Speed;
			}
			else {
				TIM_SetCounter(TIM4, 0);
				TIM4->ARR = PMSM_START_SIN_TIMER;
			}
		}

    }
}

void TIM1_UP_IRQHandler(void) {
	if (TIM_GetITStatus(TIM1, TIM_IT_Update) != RESET)
	{
		TIM_ClearITPendingBit(TIM1, TIM_IT_Update);
		if (TIM1->CNT < PMSM_CHOPPER_PERIOD / 2 ) {
			// Start ADC Conversion
			ADC_SoftwareStartConvCmd( ADC1 , ENABLE );
		}
	}
}

void PMSM_PWMTimerInit(void) {
	GPIO_InitTypeDef GPIO_InitStructure;
	TIM_TimeBaseInitTypeDef TIM_TimeBaseStructure;
	TIM_OCInitTypeDef  TIM_OCInitStructure;
	TIM_BDTRInitTypeDef TIM_BDTRInitStructure;

	NVIC_InitTypeDef NVIC_InitStructure;

	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA | RCC_APB2Periph_GPIOB, ENABLE);

	// Initialize Tim1 PWM outputs
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_13 | GPIO_Pin_14 | GPIO_Pin_15;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
	GPIO_Init(GPIOB, &GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_8 | GPIO_Pin_9 | GPIO_Pin_10;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
	GPIO_Init(GPIOA, &GPIO_InitStructure);

	RCC_APB2PeriphClockCmd(RCC_APB2Periph_TIM1, ENABLE);

	// Time Base configuration
	TIM_TimeBaseStructure.TIM_Prescaler = 0;
	//TIM_TimeBaseStructure.TIM_CounterMode = TIM_CounterMode_Up;
	TIM_TimeBaseStructure.TIM_CounterMode = TIM_CounterMode_CenterAligned1; // Center Aligned PWM
	TIM_TimeBaseStructure.TIM_Period = PMSM_CHOPPER_PERIOD;
	TIM_TimeBaseStructure.TIM_ClockDivision = 0;
	TIM_TimeBaseStructure.TIM_RepetitionCounter = 0;
	TIM_TimeBaseInit(TIM1, &TIM_TimeBaseStructure);

	// Channel 1, 2, 3 set to PWM mode - all 6 outputs
	TIM_OCInitStructure.TIM_OCMode = TIM_OCMode_Timing;
	TIM_OCInitStructure.TIM_OutputState = TIM_OutputState_Enable;
	TIM_OCInitStructure.TIM_OutputNState = TIM_OutputNState_Enable;
	TIM_OCInitStructure.TIM_Pulse = 0; // initialize to zero output

	TIM_OCInitStructure.TIM_OCPolarity = TIM_OCPolarity_High;
	TIM_OCInitStructure.TIM_OCNPolarity = TIM_OCNPolarity_High;
	TIM_OCInitStructure.TIM_OCIdleState = TIM_OCIdleState_Reset; ///
	TIM_OCInitStructure.TIM_OCNIdleState = TIM_OCNIdleState_Reset; ///

	TIM_OC1Init(TIM1, &TIM_OCInitStructure);
	TIM_OC2Init(TIM1, &TIM_OCInitStructure);
	TIM_OC3Init(TIM1, &TIM_OCInitStructure);

	TIM_BDTRInitStructure.TIM_OSSRState = TIM_OSSRState_Enable;
	TIM_BDTRInitStructure.TIM_OSSIState = TIM_OSSIState_Enable;
	TIM_BDTRInitStructure.TIM_LOCKLevel = TIM_LOCKLevel_OFF;

	// DeadTime[ns] = value * (1/SystemCoreFreq) (on 72MHz: 7 is 98ns)
	TIM_BDTRInitStructure.TIM_DeadTime = PMSM_NOL;

	TIM_BDTRInitStructure.TIM_AutomaticOutput = TIM_AutomaticOutput_Enable;

	// Break functionality
	TIM_BDTRInitStructure.TIM_Break = TIM_Break_Enable;
	TIM_BDTRInitStructure.TIM_BreakPolarity = TIM_BreakPolarity_Low;

	TIM_BDTRConfig(TIM1, &TIM_BDTRInitStructure);
	TIM_ITConfig(TIM1, TIM_IT_Update, ENABLE);

	// NVIC Configuration
	// Enable the TIM1_IRQn Interrupt
	NVIC_InitStructure.NVIC_IRQChannel = TIM1_UP_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0;
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
	NVIC_Init(&NVIC_InitStructure);

	TIM_Cmd(TIM1, ENABLE);
	 // Enable motor timer main output (the bridge signals)
	TIM_CtrlPWMOutputs(TIM1, ENABLE);
}

void PMSM_SinTimerInit(void) {
	TIM_TimeBaseInitTypeDef TIMER_InitStructure;
	NVIC_InitTypeDef NVIC_InitStructure;

	RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM4, ENABLE);

	TIM_TimeBaseStructInit(&TIMER_InitStructure);
	TIMER_InitStructure.TIM_CounterMode = TIM_CounterMode_Up;
	TIMER_InitStructure.TIM_Prescaler = PMSM_SIN_TIMER_PRESCALER;//PMSM_SPEED_TIMER_PRESCALER;
	TIMER_InitStructure.TIM_Period = 0;
	TIM_TimeBaseInit(TIM4, &TIMER_InitStructure);
	TIM_ITConfig(TIM4, TIM_IT_Update, ENABLE);
	//TIM_Cmd(TIM4, ENABLE);

	// NVIC Configuration
	// Enable the TIM4_IRQn Interrupt
	NVIC_InitStructure.NVIC_IRQChannel = TIM4_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0;
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
	NVIC_Init(&NVIC_InitStructure);
}

uint8_t	PMSM_GetState(uint8_t SensorsPosition) {
	int16_t index;
	index = settings.PMSM_STATE_TABLE_INDEX[PMSM_MotorSpin][SensorsPosition] + (int16_t)PMSM_Timing;

	return PMSM_GetNormPos(index);
}
